--- a/electron-vue/src/index.ejs
+++ b/electron-vue/src/index.ejs
@@ -9,6 +9,12 @@
       require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>')
     </script>
     <% } %>
+
+    <script src="https://use.fontawesome.com/46721ab439.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
