1:1 connection on electron

--- a/electron-vue/src/index.ejs
+++ b/electron-vue/src/index.ejs
@@ -27,33 +27,7 @@
           .replace(/\\/g, '\\\\');
     </script>
     <% } %>
-
-    <!-- <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
-
-    <script>
-      // Your web app's Firebase configuration
-      const firebaseConfig = {
-        apiKey: 'AIzaSyDsFO7xQhO1hP1UBaqigZiqkepDSilx1d4',
-        authDomain: 'soma-team-183.firebaseapp.com',
-        databaseURL: 'https://soma-team-183.firebaseio.com',
-        projectId: 'soma-team-183',
-        storageBucket: 'soma-team-183.appspot.com',
-        messagingSenderId: '957154725007',
-        appId: '1:957154725007:web:19194eea75ae450223f4fa',
-        measurementId: 'G-4CTH4Q25JE',
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-      firebase.auth();
-      console.log(firebase.auth());
-      firebase.firestore();
-      console.log('firbase loaded');
-      console.log(Vue);
-    </script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
 
     <!-- webpack builds are automatically injected -->
   </body>
