--- a/electron-vue/src/assets/css/ClassRoom.css
+++ b/electron-vue/src/assets/css/ClassRoom.css
@@ -1,4 +1,4 @@
-html body {
+/* html body {
   width: 100vw;
   height: 100vh;
   margin: 0;
@@ -8,19 +8,49 @@ html body {
 * {
   box-sizing: border-box;
 }
-
 .wrapper {
   width: 1400px;
   height: 100vh;
   margin: 0 auto;
   display: flex;
   overflow: hidden;
-}
+} */
 
 .side-navigation-panel {
-  width: 320px;
+  width: 300px;
   display: flex;
   flex-direction: column;
+}
+
+.secondary-view-panel {
+  width: 320px;
+  height: 100%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.secondary-view-panel-box-wrapper {
+  width: 100%;
+  padding: 24px 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.secondary-view-panel-box-title {
+  font-family: Gmarket Sans;
+  font-weight: bold;
+  font-size: 36px;
+  color: #00d39d;
+  margin-bottom: 20px;
+}
+
+.secondary-view-panel-box-contents {
+  width: 100%;
+  height: 400px;
+  background-color: #c4c4c4;
+  border-radius: 33px;
 }
 
 .side-navigation-header {
@@ -101,13 +131,16 @@ html body {
   font-family: Gmarket Sans;
   font-weight: bold;
   font-size: 36px;
-  text-align: start;
 
   color: #00d39d;
 }
 
-.main-panel-header-icon {
-  width: 80px;
+.main-panel-header-class-name {
+  font-family: Gmarket Sans;
+  font-weight: bold;
+  font-size: 36px;
+
+  color: #00d39d;
 }
 
 .main-panel-header-icon > img {
@@ -120,22 +153,20 @@ html body {
   height: calc(100% - 140px);
 }
 
-.main-panel-classroom-list {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 400px 400px;
-  grid-auto-flow: row;
-  justify-content: center;
-  grid-gap: 32px;
+.main-panel-class-list {
+  width: 500px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 42px 0;
 }
 
-.create-classroom-card {
-  width: 100%;
-  height: 300px;
-  border-radius: 20px;
+.create-class-item {
+  width: 400px;
+  height: 250px;
   overflow: hidden;
-  border: 5px solid #00d39d;
+  border: 3px solid #00d39d;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -144,7 +175,7 @@ html body {
   transition: transform 300ms ease-in;
 }
 
-.create-classroom-card:hover {
+.create-class-item:hover {
   transform: translateY(-10px);
 }
 
@@ -166,59 +197,88 @@ html body {
   color: #666666;
 }
 
-.classroom-card {
-  width: 100%;
-  height: 300px;
-  border-radius: 20px;
-  overflow: hidden;
-  position: relative;
-  transition: transform 300ms ease-in;
-}
-
-.classroom-card:hover {
-  transform: translateY(-10px);
-}
-
-.classroom-card-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  /* height: 300px; */
-  height: 100%;
-  opacity: 0.6;
-  background-repeat: no-repeat;
-  background-position: center center;
-  z-index: -1;
-}
-
-.classroom-card-header {
-  /* position: absolute; */
-  width: 100%;
+.class-list-header {
   display: flex;
-  align-items: center;
-  padding: 32px;
+  width: 100%;
+  margin-top: 42px;
+  margin-bottom: 12px;
 }
 
-.classroom-card-title {
-  color: #ffffff;
-  font-size: 36px;
-  font-weight: 700;
+.class-list-header-item {
   flex: 1;
+  font-family: Gmarket Sans;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 62px;
+  text-align: center;
+  color: #12ac85;
+}
+
+.class-item {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.class-item-header {
+  display: flex;
+  width: 100%;
+  height: 62px;
+  align-items: center;
+}
+
+.class-item-teacher-profile {
+  position: absolute;
+  width: 62px;
+  height: 62px;
+  top: 0;
+  left: -62px;
+  border-radius: 50%;
+  background-color: #c4c4c4;
   z-index: 1;
-  text-align: start;
 }
 
-.classroom-card-more-button {
-  width: 30px;
-  z-index: 1;
+.class-item-header-item {
+  flex: 1;
+  font-family: Gmarket Sans;
+  font-weight: bold;
+  font-size: 24px;
+  text-align: center;
+  letter-spacing: 0.31em;
+
+  color: #666666;
 }
 
-.classroom-card-more-button:hover {
-  filter: invert(100%);
-  cursor: pointer;
+.class-item-header-item-teacher-name {
+  flex: 1;
+  font-family: Gmarket Sans;
+  font-size: 24px;
+  text-align: center;
+
+  color: #666666;
 }
 
-.classroom-card-more-button > img {
-  width: 6px;
+.class-item-preview {
+  width: 440px;
+  height: 250px;
+}
+
+.class-item-class-start-button {
+  width: 200px;
+  height: 52px;
+  margin-top: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #00d39d;
+  border-radius: 30px;
+  color: #00d39d;
+  background-color: white;
+}
+
+.class-item-class-start-button:hover {
+  background-color: #00d39d;
+  color: #fff;
 }
