--- a/electron-vue/src/assets/css/ClassRoom.css
+++ b/electron-vue/src/assets/css/ClassRoom.css
@@ -244,7 +244,7 @@
   flex: 1;
   font-family: Gmarket Sans;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 15px;
   text-align: center;
   letter-spacing: 0.31em;
 
@@ -263,6 +263,11 @@
 .class-item-preview {
   width: 440px;
   height: 250px;
+}
+.class-item-preview-finished {
+  width: 440px;
+  height: 250px;
+  filter: grayscale(100%);
 }
 
 .class-item-class-start-button {
