--- a/electron-vue/src/assets/css/ClassRoom.css
+++ b/electron-vue/src/assets/css/ClassRoom.css
@@ -148,7 +148,7 @@
 }
 
 .main-panel-contents {
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   overflow-x: hidden;
   height: calc(100% - 140px);
 }
