--- a/electron-vue/src/assets/css/Dashboard2.css
+++ b/electron-vue/src/assets/css/Dashboard2.css
@@ -45,6 +45,7 @@ body {
   margin: 0 auto;
   padding: 80px 0;
   display: flex;
+  box-sizing: border-box;
 }
 
 /* .dropdown-box {
@@ -131,6 +132,7 @@ body {
   flex: 1;
   display: flex;
   align-items: flex-end;
+  margin-top: 30px;
 }
 .search-button {
   width: 120px;
@@ -204,4 +206,9 @@ body {
 .dashboard-graph {
   flex: 1;
   background-color: #fff;
+}
+
+.dashboard-graph-chart {
+  width: 100%;
+  height: 100%;
 }
