--- a/electron-vue/src/assets/css/Dashboard.css
+++ b/electron-vue/src/assets/css/Dashboard.css
@@ -1,10 +1,9 @@
-.wrapper {
+/* .wrapper {
   width: 1400px;
   height: 100vh;
   margin: 0 auto;
   display: flex;
   overflow: hidden;
-  /* background-color: black; */
 }
 
 .CCTButtons {
@@ -20,4 +19,4 @@
 }
 .CCTButtons div:focus {
   background: red;
-}
+} */
