--- a/electron-vue/src/assets/css/Dashboard2.css
+++ b/electron-vue/src/assets/css/Dashboard2.css
@@ -216,7 +216,9 @@ body {
   height: 100%;
 }
 .small {
-  width: 500px;
-  height: 300px;
+  /* width: 100%;
+  height: 100%; */
+  width: 1000px;
+  height: 550px;
   /* overflow-x: auto; */
 }
