--- a/electron-vue/src/assets/css/Class.css
+++ b/electron-vue/src/assets/css/Class.css
@@ -1,4 +1,5 @@
 html,
+
 body {
   margin: 0;
   padding: 0;
@@ -57,6 +58,10 @@ body {
   right: -120px;
   background-color: #fff;
   transition: transform 100ms ease-in;
+
+  font-family: 'GmarketSansBold';
+  font-size: 18px;
+  letter-spacing: -1px;
 }
 
 .class-screen-toolbar > * {
