--- a/electron-vue/src/assets/css/login.css
+++ b/electron-vue/src/assets/css/login.css
@@ -143,7 +143,8 @@ body {
   transition: border 100ms ease-in;
 }
 .error-message {
-  color: red;
+  padding: 10px;
+  color: #FD9790;
 }
 .sign-in-button-wrapper {
   display: flex;
