--- a/electron-vue/src/assets/css/login.css
+++ b/electron-vue/src/assets/css/login.css
@@ -25,6 +25,7 @@ body {
   width: 50%;
   height: 100%;
   background-image: url(../img/login-signup/background-left.svg);
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -144,7 +145,7 @@ body {
 }
 .error-message {
   padding: 10px;
-  color: #FD9790;
+  color: #fd9790;
 }
 .sign-in-button-wrapper {
   display: flex;
@@ -172,7 +173,7 @@ body {
 
 .go-to-signup {
   cursor: pointer;
-  color: #9097fd;
+  color: #9097fd !important;
   font-size: 20px;
   font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
   padding: 30px;
