--- a/electron-vue/src/assets/css/Dashboard.css
+++ b/electron-vue/src/assets/css/Dashboard.css
@@ -14,8 +14,8 @@ body {
 }
 .header {
   width: 100%;
-  height: 140px;
-  padding: 0 80px;
+  height: 50px;
+  /* padding: 0 80px; */
   display: flex;
   align-items: center;
   justify-content: space-between;
